1.9.37
------


1.9.36
------
(RB=220182)
Fixes to make Rest.li build on Windows.

(RB=221652)
Fix DynamicRecordTemplate to accept DataList argument while setting fields of type array.

(RB=215380)
Enabling complex key based look ups on BatchKVResponse objects. Fixing a query parameter array serialization issue in BatchKVResponse for Complex Keys.

(RB=214848)
Refactored Count checks as individual tasks out of PegasusPlugin, and reintegrated them back into
regular compatibility checks.
Changed the message emitted with changes.
New message will appear if a compatibility check is run on what appears to be a continuous integ.
environment (where -Prest.model.compatibility=equivalent).

(RB=222257)
Revert suspicious changes in R2 AsyncPool that may cause site relibility issue.

1.9.35
------
(RB=217963)
Add ability to collect and export R2 AsyncPool Stats

(RB=216982)
Add ability to config R2 AsyncPool strategy between LRU and MRU.

1.9.34
------
(RB=218284)
Enabling Async R2 Servlet

1.9.33
------
(RB=218537)
Disallow null values in setParam. Add more tests.

1.9.32
------
(RB=218023)
Fix the allowed client override keys.

1.9.31
------
(RB=217233)
Revert "Make use of async servlet api in R2 servlet. Change integration tests to start test servers as necessary."

1.9.30
------
(RB=207412)
Allowed access to the ResourceModels of a RestLiServer. Made the resourcePath generation function public.

(RB=216547)
Fixing binary incompatible removal of header, param and reqParam methods on client builder base classes.

1.9.29
------
(RB=208312)
Rename X-Linkedin headers to X-RestLi headers.

(RB=215550)
Fixed a bug in SimpleLoadBalancerState that prevented recovering from a bad property push during publishInitialize

1.9.28
------
(RB=210345)
Make use of async servlet api in R2 servlet. Change integration tests to start test servers as necessary.

1.9.27
------
(RB=212287)
Refactor restli-client request builder classes:
  1) deprecate header(), param and reqParam()